fixed doc links etc

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ _notes
 /data/Wikipedia - Windows code page.url
 /utilities/OneLocale_Demo/_lang-NOT
 /utilities/OneLocale_Demo/OneLocale_UnDemo.ahk
+/docs/OneLocale-\[en\].html
