build-release update

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ _notes
 /utilities/OneLocale_Demo/lib
 /utilities/OneLocale_Demo/OneLocale_UnDemo.ahk
 /utilities/OneLocale_FindLangID/lib
+/make/build-release.ahk.txt
