--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ _notes
 /utilities/OneLocale_Demo/OneLocale_UnDemo.ahk
 /utilities/OneLocale_FindLangID/lib
 /make/build-release.ahk.txt
+/cspell.json
+/docs/*.html
